# aws-secrets-manager

./: README.md  index.html  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml
.husky/: pre-commit
old_logic_egui/src/: app.rs  config.rs  error.rs  main.rs
old_logic_egui/src/secrets/: api.rs  mod.rs  search.rs  tree.rs
old_logic_egui/src/ui/: mod.rs  search_view.rs  tree_view.rs
scripts/: sync-version.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: aws.rs  config.rs  mod.rs  window.rs
src-tauri/src/helper/: aws_helper.rs  mod.rs
src/modules/layout/: MainLayout.tsx
src/modules/pages/: DashboardPage.tsx  ErrorBoundary.tsx  ErrorPage.tsx  NotFoundPage.tsx
src/modules/services/: tauriApi.ts
src/modules/shared/: EditorPanel.tsx  KeyboardShortcutsHelp.tsx  LogsStatus.tsx  RightPanel.tsx  SidebarLeftPanel.tsx  SidebarProfiles.tsx  TopBar.tsx  UpdateModal.tsx  types.ts
src/modules/shared/components/: ArgoCDTemplateModal.tsx  Button.tsx  Input.tsx  Modal.tsx  Select.tsx  ThemeToggle.tsx
src/modules/shared/editor/: BinaryImportPanel.tsx  BinaryTooLargePanel.tsx  EditorContent.tsx  EditorTabs.tsx  EditorToolbar.tsx  HighlightedContent.tsx
src/modules/shared/hooks/: useArgoCDTemplate.ts  useDarkTheme.ts  useEditorFocus.ts  useFileImport.ts  useGlobalShortcuts.ts  useKeyboardShortcuts.ts  useLogs.ts  useSsoStatus.ts
src/modules/shared/sidebar/: BookmarksSection.tsx  ProfilesSection.tsx  RecentSecretsSection.tsx  SecretsActions.tsx  SsoControl.tsx  VersionInfo.tsx
src/modules/shared/utils/: argocdTemplateUtils.ts  base64Utils.ts  secretDisplayUtils.ts  tabDisplayUtils.ts
src/modules/store/: useBookmarksStore.ts  useDashboardStore.ts  useEditorStore.ts  useLogsStore.ts  useProfileStore.ts  useSecretsListStore.ts  useUiStore.ts  useUpdaterStore.ts
