[package]
name = "secman"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "secman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dirs = "5"
base64 = "0.22"

# AWS SDK v1
aws-config = { version = "1" }
aws-sdk-secretsmanager = { version = "1" }
aws-sdk-sts = { version = "1" }
aws-types = { version = "1" }
aws-runtime = { version = "1" }
aws-smithy-runtime-api = { version = "1" }
aws-smithy-types = { version = "1" }
